--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,4 @@
-# Docker
-# Build a Docker image
+# Build and Push Docker image
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
@@ -12,8 +11,8 @@ variables:
   tag: '$(Build.BuildId)'
 
 stages:
-- stage: Build
-  displayName: Build image
+- stage: Build and Push
+  displayName: Build and push image
   jobs:
   - job: Build
     displayName: Build
@@ -21,9 +20,11 @@ stages:
       vmImage: ubuntu-latest
     steps:
     - task: Docker@2
-      displayName: Build an image
+      displayName: Build and push image
       inputs:
-        command: build
+        command: buildAndPush
+        containerRegistry: dockerRegistryServiceConnection1
+        repository: 'myphp'
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
           $(tag)
