Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ stages:
       inputs:
         command: buildAndPush
         containerRegistry: dockerRegistryServiceConnection1
-        repository: 'myphp'
+        repository: 'marcobolzan/myphp'
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
           $(tag)
